--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,12 +25,28 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # # Runs a single command using the runners shell
+      # - name: Run a one-line script
+      #   run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # # Runs a set of commands using the runners shell
+      # - name: Run a multi-line script
+      #   run: |
+      #     echo Add other actions to build,
+      #     echo test, and deploy your project.
+      
+      # Pulls docker image: projectdiscovery/nuclei:latest
+      - name: Pull docker image
+        run: docker pull projectdiscovery/nuclei:latest
+
+      # Runs projectdiscovery/nuclei:latest, volume mounts the current directory to /app/ in the container, add --no-interactsh flag to disable interactsh, and runs nuclei on the domains_filtered 
+      # and tee the output to output_1
+      - name: Run Nuclei
+        run: bash -c "docker run -v $(pwd):/app/ projectdiscovery/nuclei:latest -l /app/domains_filtered --no-interactsh | tee output_1"
+
+      # Save output_1 to artifacts
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: output_1
+          path: output_1
